<resources>
    <string name="app_name">ListaZadan</string>
    <string name="add_btn_desc">Add task button</string>
    <string name="add_group_btn_desc">Add group button</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_fragment_save">Save</string>
    <string name="btn_delete_desc">Delete task button</string>
    <string name="group_btn_delete_desc">Delete group button</string>
    <string name="btn_edit_desc">Edit task button</string>
    <string name="edit_date">Date</string>
    <string name="tab1">TODO Task</string>
    <string name="tab2">Done Task</string>
    <string name="settings_btn">Settings</string>
    <string name="tab3">All Task</string>
    <string name="title_groups">Groups</string>
    <string name="title_tasks">Task list</string>
    <string name="title_calendar">Calendar</string>
    <string name="edit_group">Edit groups info</string>
    <string name="textview_groupname">Group Name</string>
</resources>